fixed id column wrap issue

--- a/ATAPHtmlReport/report.css
+++ b/ATAPHtmlReport/report.css
@@ -53,6 +53,7 @@ table.audit-info tr:nth-child(even) {
 /* First column in an audit-info table */
 table.audit-info th:nth-child(1), table.audit-info td:nth-child(1) {
 	text-align: right;
+	white-space: nowrap;
     width: 40px;
 }
 
